Prevent long check messages from being hidden behind the button

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1660,6 +1660,7 @@ body > header aside p {
   font-style: italic;
   list-style: none;
   margin: 0px;
+  width: calc(100% - 140px);
 }
 
 #quality ul i {
